--- a/CSharpToTsConverter/CSharpToTsConverter.csproj
+++ b/CSharpToTsConverter/CSharpToTsConverter.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Samples\**\*.cs" />
+  </ItemGroup>
+
 </Project>
